// Diagrama de la Base de Datos: Arriendo de Canchas (Sincronizado con 01_schema.sql)

Table estados_usuarios {
  estado_usuario_id int [pk, increment]
  nombre varchar(30) [unique, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table estados_reservas {
  estado_reserva_id int [pk, increment]
  nombre varchar(30) [unique, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table estados_quinchos {
  estado_quincho_id int [pk, increment]
  nombre varchar(30) [unique, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table roles {
  rol_id int [pk, increment]
  nombre varchar(30) [unique, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table membresias {
  membresia_id int [pk, increment]
  nombre varchar(30) [unique, not null]
  porcentaje_descuento int [not null, default: 0]
  costo_mensual decimal(12,2) [not null, default: 0.00]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table tipos_canchas {
  tipo_cancha_id int [pk, increment]
  nombre varchar(50) [unique, not null]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table canchas {
  cancha_id int [pk, increment]
  nombre varchar(100) [not null]
  valor_hora decimal(12,2) [not null, default: 0.00]
  tipo_superficie varchar(50) [not null]
  tipo_recinto varchar(50) [not null]
  tipo_cancha_id int [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table torneos {
  torneo_id int [pk, increment]
  nombre varchar(100) [not null]
  fecha_inicio date [not null]
  fecha_fin date [not null]
  tipo_cancha_id int [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table usuarios {
  rut varchar(12) [pk]
  nombres varchar(100) [not null]
  apellido_p varchar(100)
  apellido_m varchar(100)
  sexo char(1) [default: 'O']
  telefono varchar(15)
  email varchar(150) [unique]
  password varchar(255)
  intentos_fallidos int [default: 0]
  contador_faltas int [default: 0]
  estado_usuario_id int [not null, default: 1]
  rol_id int [not null, default: 3]
  membresia_id int
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table quinchos {
  quincho_id int [pk, increment]
  nombre varchar(100) [not null]
  valor_reserva decimal(12,2) [not null, default: 0.00]
  solo_vip boolean [not null, default: false]
  estado_quincho_id int [not null, default: 1]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table reservas_canchas {
  reserva_cancha_id int [pk, increment]
  fecha date [not null]
  hora time [not null]
  hora_fin time [not null]
  valor_pagado decimal(12,2) [not null, default: 0.00]
  estado_id int [not null, default: 1]
  cancha_id int [not null]
  usuario_rut varchar(12) [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table reservas_quinchos {
  reserva_quincho_id int [pk, increment]
  fecha date [not null]
  hora time [not null]
  hora_fin time [not null]
  valor_pagado decimal(12,2) [not null, default: 0.00]
  estado_id int [not null, default: 1]
  quincho_id int [not null]
  usuario_rut varchar(12) [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table equipos {
  equipo_id int [pk, increment]
  nombre varchar(100) [not null]
  capitan_id varchar(12) [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table equipos_usuarios {
  equipo_id int [pk]
  usuario_rut varchar(12) [pk]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table partidos {
  partido_id int [pk, increment]
  torneo_id int [not null]
  equipo_1_id int [not null]
  equipo_2_id int [not null]
  reserva_cancha_id int [not null]
  resultado_equipo_1 int [default: 0]
  resultado_equipo_2 int [default: 0]
  es_walkover boolean [default: false]
  equipo_perdedor_id int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table tipos_penalizaciones {
  tipo_penalizacion_id int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  valor_multa decimal(12,2) [not null, default: 0.00]
  dias_bloqueo int [default: 0]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table usuarios_penalizaciones {
  usuario_penalizado_id int [pk, increment]
  usuario_rut varchar(12) [not null]
  tipo_penalizacion_id int [not null]
  monto_cobrado decimal(12,2) [not null, default: 0.00]
  fecha date [not null, default: `CURRENT_DATE`]
  pagada boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table auditoria_login {
  auditoria_id int [pk, increment]
  usuario varchar(150) [not null]
  fecha_hora timestamp [default: `CURRENT_TIMESTAMP`]
  estado_login varchar(20) [not null]
  password_ingresada varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// Relaciones con Integridad Referencial
Ref: canchas.tipo_cancha_id > tipos_canchas.tipo_cancha_id [delete: restrict]
Ref: torneos.tipo_cancha_id > tipos_canchas.tipo_cancha_id [delete: restrict]
Ref: usuarios.estado_usuario_id > estados_usuarios.estado_usuario_id [delete: restrict]
Ref: usuarios.rol_id > roles.rol_id [delete: restrict]
Ref: usuarios.membresia_id > membresias.membresia_id [delete: restrict]
Ref: quinchos.estado_quincho_id > estados_quinchos.estado_quincho_id [delete: restrict]
Ref: reservas_canchas.estado_id > estados_reservas.estado_reserva_id [delete: restrict]
Ref: reservas_canchas.cancha_id > canchas.cancha_id [delete: restrict]
Ref: reservas_canchas.usuario_rut > usuarios.rut [delete: restrict]
Ref: reservas_quinchos.estado_id > estados_reservas.estado_reserva_id [delete: restrict]
Ref: reservas_quinchos.quincho_id > quinchos.quincho_id [delete: restrict]
Ref: reservas_quinchos.usuario_rut > usuarios.rut [delete: restrict]
Ref: equipos.capitan_id > usuarios.rut [delete: restrict]
Ref: equipos_usuarios.equipo_id > equipos.equipo_id [delete: restrict]
Ref: equipos_usuarios.usuario_rut > usuarios.rut [delete: restrict]
Ref: partidos.torneo_id > torneos.torneo_id [delete: restrict]
Ref: partidos.equipo_1_id > equipos.equipo_id [delete: restrict]
Ref: partidos.equipo_2_id > equipos.equipo_id [delete: restrict]
Ref: partidos.reserva_cancha_id > reservas_canchas.reserva_cancha_id [delete: restrict]
Ref: partidos.equipo_perdedor_id > equipos.equipo_id [delete: restrict]
Ref: usuarios_penalizaciones.usuario_rut > usuarios.rut [delete: restrict]
Ref: usuarios_penalizaciones.tipo_penalizacion_id > tipos_penalizaciones.tipo_penalizacion_id [delete: restrict]
